<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/bottom_sheet_bg"
        android:padding="32dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginTop="32dp"
            app:layout_constraintBottom_toTopOf="@+id/textView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_the_access_code_sent_to_your_email_to_register_as_a_sales_agent"
            android:textSize="16sp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toTopOf="@+id/textView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/invite_code"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/pin_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <com.chaos.view.PinView
            android:id="@+id/pin_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/PinWidget.PinView"
            android:cursorVisible="true"
            android:inputType="number"
            android:textSize="18sp"
            android:textStyle="bold"
            app:itemCount="5"
            app:itemHeight="50dp"
            app:itemRadius="4dp"
            app:itemSpacing="8dp"
            app:itemWidth="60dp"
            app:lineWidth="2dp"
            app:lineColor="@color/light_grey"
            app:layout_constraintBottom_toTopOf="@+id/button_proceed"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_proceed"
            android:layout_width="match_parent"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/button_padding"
            android:text="@string/proceed"
            android:textAllCaps="false"
            android:enabled="false"
            android:textSize="18sp"
            android:textStyle="bold"
            app:backgroundTint="@color/green_btn_bg"
            android:textColor="@color/white"
            app:layout_goneMarginTop="32dp"
            app:layout_goneMarginBottom="32dp"
            app:layout_constraintBottom_toTopOf="@+id/textView4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pin_view" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_access_code"
            android:layout_marginTop="8dp"
            android:textSize="15sp"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/request_access"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_proceed" />

        <TextView
            android:id="@+id/request_access"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:clickable="true"
            android:focusable="true"
            android:background="?android:selectableItemBackground"
            android:text="@string/request_access"
            android:textColor="@color/green"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView4"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toTopOf="@+id/textView4" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>